убрал замечания валидатора

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Гостиницы в городе "Седона"</title>
   </head>
   <body>
+
     <!-- Шапка страницы -->
     <header class="main-header">
       <a class="logo-link" href="/">
-        <img class="logo-img" src="#" alt="Логотип 'Седоны'" />
+        <img class="logo-img" src="#" alt="Логотип 'Седоны'">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
@@ -63,7 +64,7 @@
 
       <!-- Секция "вступление" -->
       <section class="introduction">
-        <h2 class="introduction-title">Седона — небольшой городок в Аризоне,<br />заслуживающий большего!</h2>
+        <h2 class="introduction-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
         <p class="introduction-reason">
           Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!
         </p>
@@ -74,33 +75,33 @@
         <h2 class="visually-hidden">Преимущества Седоны</h2>
         <ul class="advantages-list">
           <li class="advantages-item true-city">
-            <h3 class="advantages-title">Настоящий<br />городок</h3>
+            <h3 class="advantages-title">Настоящий<br> городок</h3>
             <p class="advantages-description">
-              Седона — не аттракцион для<br />туристов, там течёт своя<br />жизнь
+              Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь
             </p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">Небольшая<br />площадь</h3>
+            <h3 class="advantages-title">Небольшая<br> площадь</h3>
             <p class="advantages-description">
-              Все достопримечательности<br />находятся очень близко
+              Все достопримечательности<br> находятся очень близко
             </p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">Красивая<br />дорога</h3>
+            <h3 class="advantages-title">Красивая<br> дорога</h3>
             <p class="advantages-description">
-              Ехать в Седону из Лас-Вегаса<br />совсем не скучно!
+              Ехать в Седону из Лас-Вегаса<br> совсем не скучно!
             </p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">Мало<br />туристов</h3>
+            <h3 class="advantages-title">Мало<br> туристов</h3>
             <p class="advantages-description">
-              Большинство едет в Гранд<br />Каньон и толпится там
+              Большинство едет в Гранд<br> Каньон и толпится там
             </p>
           </li>
           <li class="advantages-item bridge">
-            <h3 class="advantages-title">Там есть<br />мост дьявола</h3>
+            <h3 class="advantages-title">Там есть<br> мост дьявола</h3>
             <p class="advantages-description">
-              Да, по нему можно пройти!<br />Если вы осмелитесь,<br />разумеется
+              Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется
             </p>
           </li>
         </ul>
@@ -109,7 +110,7 @@
       <!-- Призыв к действию -->
       <!-- Тут тоже множество вопросов по правильности оформления и выделения этого блока в отдельную секцию -->
       <section class="call_to_action">
-        <h2 class="call_to_action-header">Приезжайте в Седону отдохнуть<br />в комфорте и уюте!</h2>
+        <h2 class="call_to_action-header">Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</h2>
         <p class="call_to_action-description">
           Опытный персонал и качественное обслуживание!
         </p>
@@ -122,19 +123,19 @@
           <li class="service-item">
             <h3 class="service-title service-home">Жильё</h3>
             <p class="service-description">
-              Рекомендуем пожить<br/>в настоящем мотеле,<br />всё как в кино!
+              Рекомендуем пожить<br/>в настоящем мотеле,<br> всё как в кино!
             </p>
           </li>
           <li class="service-item service-eat">
             <h3 class="service-title">Еда</h3>
             <p class="service-description">
-              Всегда заказывайте<br />топовый фирменный бургер,<br />вы не разочаруетесь!
+              Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!
             </p>
           </li>
           <li class="service-item service-souvenirs">
             <h3 class="service-title">Сувениры</h3>
             <p class="service-description">
-              Не только китайского,<br />но и настоящего местного<br />производства!
+              Не только китайского,<br> но и настоящего местного<br> производства!
             </p>
           </li>
         </ul>
@@ -146,7 +147,7 @@
         <!-- Вопрос, какой тег лучше использовать, strong кажется не подходящим, делать это заголовком, не отобразит сути блока -->
         <b class="search-title">Заинтересовались?</b>
         <p class="search-description">
-          Укажите предполагаемые даты поездки,<br />и мы покажем вам лучшие предложения гостиниц в Седоне
+          Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне
         </p>
         <a class="btn" href="/catalog.html" >ПОИСК ГОСТИНИЦЫ В Седоне</a>
       </section>
@@ -157,7 +158,7 @@
         <!-- Тут уже кажется что тег strong более подходящий, просто потому что это акцентный текст, так же призыв к действию -->
         <strong class="subscribe-title">Подпишитесь на рассылку</strong>
         <p class="subscribe-description">
-          Только полезная информация и никакого спама,<br />честное бойскаутское!
+          Только полезная информация и никакого спама,<br> честное бойскаутское!
         </p>
       </section>
     </main>
