--- a/catalog.html
+++ b/catalog.html
@@ -1,32 +1,265 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <title>Каталог гостиниц города  "Седона"</title>
+  </head>
   <body>
+
+    <!-- Шапка страницы -->
     <header class="main-header">
-      <img src="#" alt="Логотип Седоны">
-      <nav class="main-navigation">
-        <li class="navigation-list">
-          <ul class="navigation-item"><a href="/">Главная</a></ul>
-          <ul class="navigation-item"><a href="#">О седоне</a></ul>
-          <ul class="navigation-item"><a href="/catalog.html">Гостиницы</a></ul>
-        </li>
+      <a class="logo-link" href="/">
+        <img class="logo-img" src="#" alt="Логотип 'Седоны'">
+      </a>
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="/">
+              Главная
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              О Седоне
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">
+              Гостиницы
+            </a>
+          </li>
+        </ul>
+
+        <ul class="navigation-list action-list">
+          <li class="navigation-item">
+            <button class="navigation-link btn-search" type="button">
+              <span class="visually-hidden">Поиск</span>
+            </button>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link favorits" href="#">
+              <span class="visually-hidden">Мои избранные гостиницы</span>
+              <span class="favorits-count">12</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link btn" href="#">
+              Хочу сюда!
+            </a>
+          </li>
+        </ul>
       </nav>
-      <li >
-
-      </li>
-      <button class="btn ">
-
-      </button>
     </header>
-    <main class="">
-      <h1></h1>
+
+    <main class="catalog-main">
+      <header class="catalog-header">
+        <h1 class="catalog-header-title">Гостиницы Седоны</h1>
+        <ul class="breadcrumbs">
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link breadcrumbs-home" href="index.html">
+              <span class="visually-hidden">Главная</span>
+            </a>
+          </li>
+          <li class="breadcrumbs-item">
+            <a class="breadcrumbs-link">Гостиницы</a>
+          </li>
+        </ul>
+      </header>
+
+      <section class="filter">
+        <h2 class="visually-hidden">Фильтр</h2>
+        <form class="filter-form" action="https://echo.htmlacademy.ru/" method="get">
+          <fieldset class="filter-group">
+            <legend class="filter-title">Инфраструктура:</legend>
+            <ul class="filter-list">
+              <li class="filter-item">
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="infrastructure" checked>
+                  Бассейн
+                </label>
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="infrastructure" checked>
+                  Парковка
+                </label>
+                <label class="control">
+                  <input class="control-input" type="checkbox" name="infrastructure">
+                  Wi-Fi
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="filter-group">
+            <legend class="filter-title">Тип жилья:</legend>
+            <ul class="filter-list">
+              <li class="filter-item">
+                <label class="control">
+                  <input class="control-input" type="radio" name="apartments">
+                  Гостиница
+                </label>
+                <label class="control">
+                  <input class="control-input" type="radio" name="apartments">
+                  Мотель
+                </label>
+                <label class="control">
+                  <input class="control-input" type="radio" name="apartments">
+                  Апартаменты
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="filter-group">
+            <legend class="filter-title">Стоимость, ₽:</legend>
+            <input class="input-amount" type="number" name="from-amount" value="0">
+            <input class="input-amount" type="number" name="to-amount" value="9000">
+            <input class="range-amount" type="range" name="range-amount" min="0" max="9000">
+          </fieldset>
+          <input class="btn" type="submit" value="Применить">
+          <input class="btn transparent" type="reset" value="Сбросить">
+        </form>
+      </section>
+
+      <section class="catalog">
+        <h2 class="visually-hidden">Найденные гостиницы</h2>
+        <strong class="search-count">Найдено гостиниц: 38</strong>
+        <select class="sort-select" name="sort">
+          <option class="sort-variant" value="Сначала дешевые" selected>Сначала дешевые</option>
+        </select>
+        <ul class="visible-type-list">
+          <li class="visible-type-item">
+            <button class="btn" type="button">
+              <span class="visually-hidden">Показать карточки</span>
+            </button>
+          </li>
+          <li class="visible-type-item">
+            <button class="btn" type="button">
+              <span class="visually-hidden">Показать иначе</span>
+            </button>
+          </li>
+          <li class="visible-type-item">
+            <button class="btn" type="button">
+              <span class="visually-hidden">Показать список</span>
+            </button>
+          </li>
+        </ul>
+        <ol class="catalo-list">
+          <li class="catalo-card">
+            <img class="catalo-card-image" src="#" alt="Вид из гостиницы">
+            <h3 class="catalo-card-title">Amara Resort & Spa</h3>
+            <span class="catalo-card-apartments-type">Гостиница</span>
+            <span class="catalo-card-price">От 4000 ₽</span>
+            <a class="btn btn-catalo-details" href="#">подробнее</a>
+            <button class="btn btn-catalog-favorit">в избранное</button>
+            <fieldset class="catalo-card-stars-count">
+              <legend class="visually-hidden">4 звезды</legend>
+              <span class="catalo-card-star"></span>
+              <span class="catalo-card-star"></span>
+              <span class="catalo-card-star"></span>
+              <span class="catalo-card-star"></span>
+            </fieldset>
+            <span class="catalo-card-raiting">Рейтинг: <strong>8,5</strong></span>
+          </li>
+          <li class="catalo-card">
+            <img class="catalo-card-image" src="#" alt="Вид из гостиницы">
+            <h3 class="catalo-card-title">Villas at Poco Diablo</h3>
+            <span class="catalo-card-apartments-type">Гостиница</span>
+            <span class="catalo-card-price">От 5000 ₽</span>
+            <a class="btn btn-catalo-details" href="#">подробнее</a>
+            <button class="btn btn-catalog-favorit-added">в избранном</button>
+            <fieldset class="catalo-card-stars-count">
+              <legend class="visually-hidden">4 звезды</legend>
+              <span class="catalo-card-star"></span>
+              <span class="catalo-card-star"></span>
+              <span class="catalo-card-star"></span>
+              <span class="catalo-card-star"></span>
+            </fieldset>
+            <span class="catalo-card-raiting">Рейтинг: <strong>9,2</strong></span>
+          </li>
+          <li class="catalo-card">
+            <img class="catalo-card-image" src="#" alt="Вид из гостиницы">
+            <h3 class="catalo-card-title">Desert Quail Inn</h3>
+            <span class="catalo-card-apartments-type">Гостиница</span>
+            <span class="catalo-card-price">От 2500 ₽</span>
+            <a class="btn btn-catalo-details" href="#">подробнее</a>
+            <button class="btn btn-catalog-favorit">в избранное</button>
+            <fieldset class="catalo-card-stars-count">
+              <legend class="visually-hidden">3 звезды</legend>
+              <span class="catalo-card-star"></span>
+              <span class="catalo-card-star"></span>
+              <span class="catalo-card-star"></span>
+            </fieldset>
+            <span class="catalo-card-raiting">Рейтинг: <strong>6,9</strong></span>
+          </li>
+          <li class="catalo-card">
+            <img class="catalo-card-image" src="#" alt="Вид из гостиницы">
+            <h3 class="catalo-card-title">GreenTree Inn</h3>
+            <span class="catalo-card-apartments-type">Гостиница</span>
+            <span class="catalo-card-price">От 1500 ₽</span>
+            <a class="btn btn-catalo-details" href="#">подробнее</a>
+            <button class="btn btn-catalog-favorit">в избранное</button>
+            <fieldset class="catalo-card-stars-count">
+              <legend class="visually-hidden">2 звезды</legend>
+              <span class="catalo-card-star"></span>
+              <span class="catalo-card-star"></span>
+            </fieldset>
+            <span class="catalo-card-raiting">Рейтинг: <strong>5,0</strong></span>
+          </li>
+        </ol>
+        <ul class="pagination">
+          <li class="pagination-item">
+            <a class="pagination-link pagination-current">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">4</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link pagination-skip">...</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="#">10</a>
+          </li>
+        </ul>
+      </section>
+
+      <!-- Рассылка -->
+      <section class="subscribe without-bg">
+        <h2 class="visually-hidden">Рассылка</h2>
+        <strong class="subscribe-title">Подпишитесь на рассылку</strong>
+        <p class="subscribe-description">
+          Только полезная информация и никакого спама,<br> честное бойскаутское!
+        </p>
+      </section>
     </main>
-    <footer>
-      <h2>Подпишись на рассылку</h2>
-      <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-      <form action="https://echo.htmlacademy.ru/" method="post">
-        <input type="email" placeholder="Ваш e-mail" name="email">
-        <input type="submit" value="">
-      </form>
+
+    <!-- Подвал -->
+    <footer class="main-footer">
+      <h2 class="visually-hidden">Контакты</h2>
+      <ul class="social-list">
+        <li class="social-item">
+          <a class="social-link social-vk" href="https://vk.com/htmlacademy">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-link social-tg" href="https://t.me/htmlacademy">
+            <span class="visually-hidden">Телеграм</span>
+          </a>
+        </li>
+        <li class="social-item">
+          <a class="social-link social-yt" href="https://www.youtube.com/user/htmlacademyru">
+            <span class="visually-hidden">Ютуб</span>
+          </a>
+        </li>
+      </ul>
+      <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="html-academy-link" href="https://htmlacademy.ru">
+        <img class="html-academy-image" src="#" alt="Логотип .html academy">
+      </a>
     </footer>
   </body>
 </html>
