исправил адреса ссылок

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <!-- Шапка страницы -->
     <header class="main-header">
-      <a class="logo-link" href="/">
+      <a class="logo-link" href="index.html">
         <img class="logo-img" src="#" alt="Логотип 'Седоны'">
       </a>
       <nav class="navigation">
