--- a/catalog.html
+++ b/catalog.html
@@ -8,13 +8,13 @@
 
     <!-- Шапка страницы -->
     <header class="main-header">
-      <a class="logo-link" href="/">
+      <a class="logo-link" href="index.html">
         <img class="logo-img" src="#" alt="Логотип 'Седоны'">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="/">
+            <a class="navigation-link" href="index.html">
               Главная
             </a>
           </li>
@@ -93,7 +93,7 @@
             <ul class="filter-list">
               <li class="filter-item">
                 <label class="control">
-                  <input class="control-input" type="radio" name="apartments">
+                  <input class="control-input" type="radio" name="apartments" checked>
                   Гостиница
                 </label>
                 <label class="control">
