--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">
+            <a class="navigation-link">
               Гостиницы
             </a>
           </li>
@@ -32,9 +32,9 @@
 
         <ul class="navigation-list action-list">
           <li class="navigation-item">
-            <button class="navigation-link btn-search" type="button">
+            <a class="navigation-link btn-search">
               <span class="visually-hidden">Поиск</span>
-            </button>
+            </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link favorits" href="#">
@@ -126,19 +126,19 @@
         </select>
         <ul class="visible-type-list">
           <li class="visible-type-item">
-            <button class="btn" type="button">
+            <a class="btn" href="#">
               <span class="visually-hidden">Показать карточки</span>
-            </button>
+            </a>
           </li>
           <li class="visible-type-item">
-            <button class="btn" type="button">
+            <a class="btn" href="#">
               <span class="visually-hidden">Показать иначе</span>
-            </button>
+            </a>
           </li>
           <li class="visible-type-item">
-            <button class="btn" type="button">
+            <a class="btn" href="#">
               <span class="visually-hidden">Показать список</span>
-            </button>
+            </a>
           </li>
         </ul>
         <ol class="catalo-list">
@@ -149,14 +149,10 @@
             <span class="catalo-card-price">От 4000 ₽</span>
             <a class="btn btn-catalo-details" href="#">подробнее</a>
             <button class="btn btn-catalog-favorit">в избранное</button>
-            <fieldset class="catalo-card-stars-count">
-              <legend class="visually-hidden">4 звезды</legend>
-              <span class="catalo-card-star"></span>
-              <span class="catalo-card-star"></span>
-              <span class="catalo-card-star"></span>
-              <span class="catalo-card-star"></span>
-            </fieldset>
-            <span class="catalo-card-raiting">Рейтинг: <strong>8,5</strong></span>
+            <span class="catalo-card-star star-4">
+              <b class="visually-hidden">4 звезды</b>
+            </span>
+            <span class="catalo-card-raiting">Рейтинг: 8,5</span>
           </li>
           <li class="catalo-card">
             <img class="catalo-card-image" src="#" alt="Вид из гостиницы">
@@ -165,14 +161,10 @@
             <span class="catalo-card-price">От 5000 ₽</span>
             <a class="btn btn-catalo-details" href="#">подробнее</a>
             <button class="btn btn-catalog-favorit-added">в избранном</button>
-            <fieldset class="catalo-card-stars-count">
-              <legend class="visually-hidden">4 звезды</legend>
-              <span class="catalo-card-star"></span>
-              <span class="catalo-card-star"></span>
-              <span class="catalo-card-star"></span>
-              <span class="catalo-card-star"></span>
-            </fieldset>
-            <span class="catalo-card-raiting">Рейтинг: <strong>9,2</strong></span>
+            <span class="catalo-card-star star-4">
+              <b class="visually-hidden">4 звезды</b>
+            </span>
+            <span class="catalo-card-raiting">Рейтинг: 9,2</span>
           </li>
           <li class="catalo-card">
             <img class="catalo-card-image" src="#" alt="Вид из гостиницы">
@@ -181,13 +173,10 @@
             <span class="catalo-card-price">От 2500 ₽</span>
             <a class="btn btn-catalo-details" href="#">подробнее</a>
             <button class="btn btn-catalog-favorit">в избранное</button>
-            <fieldset class="catalo-card-stars-count">
-              <legend class="visually-hidden">3 звезды</legend>
-              <span class="catalo-card-star"></span>
-              <span class="catalo-card-star"></span>
-              <span class="catalo-card-star"></span>
-            </fieldset>
-            <span class="catalo-card-raiting">Рейтинг: <strong>6,9</strong></span>
+            <span class="catalo-card-star star-3">
+              <b class="visually-hidden">3 звезды</b>
+            </span>
+            <span class="catalo-card-raiting">Рейтинг: 6,9</span>
           </li>
           <li class="catalo-card">
             <img class="catalo-card-image" src="#" alt="Вид из гостиницы">
@@ -196,12 +185,10 @@
             <span class="catalo-card-price">От 1500 ₽</span>
             <a class="btn btn-catalo-details" href="#">подробнее</a>
             <button class="btn btn-catalog-favorit">в избранное</button>
-            <fieldset class="catalo-card-stars-count">
-              <legend class="visually-hidden">2 звезды</legend>
-              <span class="catalo-card-star"></span>
-              <span class="catalo-card-star"></span>
-            </fieldset>
-            <span class="catalo-card-raiting">Рейтинг: <strong>5,0</strong></span>
+            <span class="catalo-card-star star-2">
+              <b class="visually-hidden">2 звезды</b>
+            </span>
+            <span class="catalo-card-raiting">Рейтинг: 5,0</span>
           </li>
         </ol>
         <ul class="pagination">
