--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
     <!-- Шапка страницы -->
     <header class="main-header">
-      <a class="logo-link" href="index.html">
+      <a class="logo-link">
         <img class="logo-img" src="#" alt="Логотип 'Седоны'">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="index.html">
+            <a class="navigation-link">
               Главная
             </a>
           </li>
@@ -32,14 +32,9 @@
 
         <ul class="navigation-list action-list">
           <li class="navigation-item">
-            <!--
-            Тут не совсем понятно что поиск что избранное имеет одинаковое отображение,
-            но поиск (по моему) это открытие модального окна, а "избранное" это ссылка.
-            не особо понятно, можно ли ему давать клас navigation-link
-            -->
-            <button class="navigation-link btn-search" type="button">
+            <a class="navigation-link btn-search" href="catalog.html">
               <span class="visually-hidden">Поиск</span>
-            </button>
+            </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link favorits" href="#">
@@ -110,7 +105,6 @@
       </section>
 
       <!-- Призыв к действию -->
-      <!-- Тут тоже множество вопросов по правильности оформления и выделения этого блока в отдельную секцию -->
       <section class="call_to_action">
         <h2 class="call_to_action-header">Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</h2>
         <p class="call_to_action-description">
