--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <p class="advantages-description">
               Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь
             </p>
+            <img src="images/photo_1.jpg" width="800" height="385" alt="Здание с Американским флагом">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая<br> площадь</h3>
@@ -92,6 +93,7 @@
             </p>
           </li>
           <li class="advantages-item bridge">
+            <img src="images/photo_2.jpg" width="800" height="385" alt="Скалы">
             <h3 class="advantages-title">Там есть<br> мост дьявола</h3>
             <p class="advantages-description">
               Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется
