добавил описание к карточкам гостиниц

--- a/catalog.html
+++ b/catalog.html
@@ -143,7 +143,7 @@
         </ul>
         <ol class="catalo-list">
           <li class="catalo-card">
-            <img class="catalo-card-image" width="300" height="212" src="images/result_1.jpg" alt="Вид из гостиницы">
+            <img class="catalo-card-image" width="300" height="212" src="images/result_1.jpg" alt="Вид на звездное небо из пещеры">
             <h3 class="catalo-card-title">Amara Resort & Spa</h3>
             <span class="catalo-card-apartments-type">Гостиница</span>
             <span class="catalo-card-price">От 4000 ₽</span>
@@ -155,7 +155,7 @@
             <span class="catalo-card-raiting">Рейтинг: 8,5</span>
           </li>
           <li class="catalo-card">
-            <img class="catalo-card-image" width="300" height="212" src="images/result_3.jpg" alt="Вид из гостиницы">
+            <img class="catalo-card-image" width="300" height="212" src="images/result_3.jpg" alt="Вид на горы на фоне серых туч с радугой">
             <h3 class="catalo-card-title">Villas at Poco Diablo</h3>
             <span class="catalo-card-apartments-type">Гостиница</span>
             <span class="catalo-card-price">От 5000 ₽</span>
@@ -167,7 +167,7 @@
             <span class="catalo-card-raiting">Рейтинг: 9,2</span>
           </li>
           <li class="catalo-card">
-            <img class="catalo-card-image" width="300" height="212" src="images/result_2.jpg" alt="Вид из гостиницы">
+            <img class="catalo-card-image" width="300" height="212" src="images/result_2.jpg" alt="Вид на горы на фоне ясного неба">
             <h3 class="catalo-card-title">Desert Quail Inn</h3>
             <span class="catalo-card-apartments-type">Гостиница</span>
             <span class="catalo-card-price">От 2500 ₽</span>
@@ -179,7 +179,7 @@
             <span class="catalo-card-raiting">Рейтинг: 6,9</span>
           </li>
           <li class="catalo-card">
-            <img class="catalo-card-image" width="300" height="212" src="images/result_4.jpg" alt="Вид из гостиницы">
+            <img class="catalo-card-image" width="300" height="212" src="images/result_4.jpg" alt="Вид на горы с оранжевым закатом">
             <h3 class="catalo-card-title">GreenTree Inn</h3>
             <span class="catalo-card-apartments-type">Гостиница</span>
             <span class="catalo-card-price">От 1500 ₽</span>
