--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
     <!-- Шапка страницы -->
     <header class="main-header">
-      <a class="logo-link">
+      <a class="logo-link" href="/">
         <img class="logo-img" width="140" height="70" src="images/logo.svg" alt="Логотип 'Седоны'">
       </a>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link">
+            <a class="navigation-link" href="/">
               Главная
             </a>
           </li>
@@ -152,7 +152,7 @@
         <p class="subscribe-description">
           Только полезная информация и никакого спама,<br> честное бойскаутское!
         </p>
-        <form action="https://echo.htmlacademy.ru/">
+        <form action="https://echo.htmlacademy.ru/" method="post">
           <label class="visually-hidden" for="subscribe-email">
             Укажите ваш email
           </label>
